cluster/kubernetes/minio-buckets/images-maccas.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maccas-images
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/upstream-vhost: maccas-images.s3.inf-k8s.net
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header CF-Connecting-IP;
spec:
  ingressClassName: nginx
  rules:
    - host: images.maccas.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - secretName: images-maccas-api-tls
      hosts:
        - images.maccas.one
